raw/NYOMAN SATRIA YUDISTIRA DEWA 6403 245150201111030/2024-11-14-07-40-18.ceg/compilation.txt
NT.java:3: error: class Nt2 is public, should be declared in a file named Nt2.java
public class Nt2 {
       ^
1 error
Not compiled
